--- a/ProyectoPooDist/src/PaquetePrincipal/FrameInventario.form
+++ b/ProyectoPooDist/src/PaquetePrincipal/FrameInventario.form
@@ -87,15 +87,10 @@
                       <Component id="jPanel5" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="panelp4" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="17" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="PanelB4" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="panelp4" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="PanelB4" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -661,7 +656,7 @@
                 <Container class="javax.swing.JPanel" name="panelp1">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ca" green="96" red="55" type="rgb"/>
+                      <Color blue="ff" green="ff" red="66" type="rgb"/>
                     </Property>
                   </Properties>
 
